<resources>
    <string name="app_name">北航音乐</string>
    <string name="dayu">></string>
    <string name="copyright">中国移动   版权所有</string>
    <string name="select">模糊查询</string>
    <string name="login_logo_desc">登录界面logo</string>
    <string name="description">图片描述</string>
    <string name="login_input_name_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">歌曲列表</string>
    <string name="category">歌词</string>
    <string name="collect">网络歌曲</string>
    <string name="setting">MV</string>
    <!-- 修改密码 -->
    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="re_password">请确认新密码</string>
    <string name="change">修改</string>
    <!-- 设置 -->
    <string name="setting_lianxiren">更新联系人</string>
    <string name="setting_changepass">修改密码</string>
    <string name="setting_scan_songs">扫描本地歌曲</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_login">登录</string>
    <string name="setting_setting">设置</string>
    <!-- 设置界面 -->
    <string name="setting_play">播放设置</string>
    <string name="setting_below">去掉小于2M的歌曲</string>
    <string name="setting_auto_start">启动后歌曲自动播放</string>
    <string name="setting_close_net">关闭网络作为本地播放器</string>
    <string name="setting_suguess">意见反馈</string>
    <string name="setting_about_soft">软件相关</string>
    <string name="setting_person_set">个人设置</string>
    <string name="setting_title">设置</string>
    <string name="setting_return">返回</string>
    <string name="setting_position_shuoming">开启后弹出窗口显示在屏幕上方。\n关闭后弹出窗口将显示在屏幕下方。</string>
    <string name="setting_delay_shuoming">开启后将覆盖其他软件弹出窗口。\n如无其他来电提示软件，建议关闭此选项。</string>
    <string name="setting_update">检查更新</string>
    <!-- 意见反馈 -->
    <string name="advice_title">意见反馈</string>
    <string name="advice_button_submit">提交</string>
    <!-- 新闻搜索 -->
    <string name="news_search_title">新闻搜索</string>
    <string name="news_search_sousuo">搜索</string>
    <!-- 活动搜索 -->
    <string name="activity_search_title">活动搜索</string>
    <string name="activity_search_sousuo">搜索</string>
    <!-- 设置 -->
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="app_recommend">应用推荐</string>
    <string name="clear_cache">清除缓存</string>
    <string name="mobile_number">手机号</string>
    <string name="mobile_number_hint">方便我们尽快反馈</string>
    <string name="fragement_songlist_title">歌曲列表</string>

</resources>
